--- a/aulosplayer/config/players.json.example
+++ b/aulosplayer/config/players.json.example
@@ -6,13 +6,13 @@
     "audio": [
         {
             "id": 1,
-            "host": "1.2.3.4",
+            "host": "192.0.2.1",
             "port": 6600,
-            "enabled": true
+            "enabled": false
         },
         {
             "id": 2,
-            "host": "5.6.7.8",
+            "host": "192.0.2.2",
             "port": 6600,
             "enabled": false,
             "list_mode": ["shared"]
